log
Sat, Apr 19, 2025 12:06:41 AM: 
 hashmap.c | 72 +++++++++++++++++++++++++++++++++++++++++++++++++++++++--------
 1 file changed, 63 insertions(+), 9 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:74:32: error: implicit declaration of function 'mallcoc' [-Werror=implicit-function-declaration]
     HashMap *mapa = (HashMap *)mallcoc(sizeof(HashMap));
                                ^~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Sat, Apr 19, 2025 12:07:45 AM: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:69:10: error: unused variable 'old_capacity' [-Werror=unused-variable]
     long old_capacity = map->capacity;
          ^~~~~~~~~~~~
hashmap.c:68:13: error: unused variable 'old_buckets' [-Werror=unused-variable]
     Pair ** old_buckets = map->buckets;
             ^~~~~~~~~~~
cc1.exe: all warnings being treated as errors
abefac6
Sat, Apr 19, 2025 12:08:28 AM: 
 hashmap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
Compilation failed
test.c: In function 'enlarge':
test.c:453:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:453:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:217:5: error: 'insert_test5' defined but not used [-Werror=unused-function]
 int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
     ^~~~~~~~~~~~
test.c:131:6: error: 'compare_test' defined but not used [-Werror=unused-function]
 void compare_test(){
      ^~~~~~~~~~~~
test.c:125:6: error: 'hash_test3' defined but not used [-Werror=unused-function]
 void hash_test3(){ //no random
      ^~~~~~~~~~
test.c:111:6: error: 'hash_test2' defined but not used [-Werror=unused-function]
 void hash_test2(){ // colisiones
      ^~~~~~~~~~
test.c:100:6: error: 'hash_test1' defined but not used [-Werror=unused-function]
 void hash_test1(){ // posición válida
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
d976164
